# create-release-ticket

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  config.yaml  pyproject.toml
backend/: __init__.py  main.py
backend/models/: __init__.py  schemas.py
backend/routers/: __init__.py  releases.py
backend/services/: __init__.py  websocket_manager.py  workflow_service.py
docs/: SDD-start-from-step.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ReleaseCard.tsx  SearchFilter.tsx  StepProgress.tsx  Toast.tsx
frontend/src/lib/: api.ts  validation.ts  websocket.ts
frontend/src/pages/: Dashboard.tsx  NewRelease.tsx  ReleaseDetail.tsx
frontend/src/stores/: releaseStore.ts
frontend/src/types/: api.ts
scripts/: find_jenkins_build.py
src/create_release_ticket/: __init__.py  cli.py  config.py  logging_config.py  rollback.py  state.py  utils.py
src/create_release_ticket/clients/: __init__.py  base.py  github.py  jenkins.py  jira.py
src/create_release_ticket/templates/: __init__.py  deployment_ticket.py  promote_ticket.py
tests/: __init__.py  test_datetime_imports.py  test_jira_issue_link.py  test_promote_ticket.py  test_state.py  test_state_resume.py  test_utils.py
tests/e2e/: __init__.py  test_resume_scenarios.py  test_workflow_e2e.py
tests/fakes/: __init__.py  clients.py
